--- a/HW-Portfolio-Solved.html
+++ b/HW-Portfolio-Solved.html
@@ -29,33 +29,33 @@
 
 
       <div class="work">
-        <img src="Assets\Images\Project_1.PNG" alt="Project-1">
-        <a href="http://www.google.com"> <h3>Project-1</h3></a>
+        <img src="Assets\Images\Project_1.PNG" alt="Tail-Wag-Companion">
+        <a href="https://github.com/glipps/Tail-Wag-Companion"> <h3>Project-1</h3></a>
       </div>
 
       <div class="work">
         <img src="Assets\Images\trivagame.PNG" alt="Triva Game">
-        <a href="http://www.google.com"><h3>Triva Game</h3></a>
+        <a href="https://github.com/glipps/Trivia-Game"><h3>Triva Game</h3></a>
       </div>
 
       <div class="work">
-        <img src="Assets\Images\Trivia Game Image.jpg" alt="Another Project">
-        <a href="http://www.google.com"><h3>Another Project</h3></a>
+        <img src="Assets\Images\Trivia Game Image.jpg" alt="CodeRagev2">
+        <a href="https://github.com/glipps/CodeRageV2"><h3>Another Project</h3></a>
       </div>
 
       <div class="work">
         <img src="Assets\Images\Crystal Collector.PNG" alt="Crystal Collector">
-        <a href="http://www.google.com"><h3>Crystal Collector</h3></a>
+        <a href="https://github.com/glipps/Crystal-Collector"><h3>Crystal Collector</h3></a>
       </div>
 
       <div class="work">
-        <img src="Assets\Images\word-guess.jpg" alt="Word-Guess-Game">
-        <a href="http://www.google.com"><h3>Word-Guess-Game</h3></a>
+        <img src="Assets\Images\word-guess.jpg" alt="Word-Guess">
+        <a href="https://github.com/glipps/Word-Guess"><h3>Word-Guess-Game</h3></a>
       </div>
 
       <div class="work">
         <img src="Assets\Images\Train-Schedule.PNG" alt="Train Schedule">
-        <a href="http://www.google.com"><h3>Train Schedule</h3></a>
+        <a href="https://github.com/glipps/Train-Schedule"><h3>Train Schedule</h3></a>
       </div>
 
       
