adding links to linkedin and github

--- a/HW-AboutMe-Solved.html
+++ b/HW-AboutMe-Solved.html
@@ -20,6 +20,7 @@
         <a href="HW-AboutMe-Solved.html">About</a>
         <a href="HW-Portfolio-Solved.html">Portfolio</a>
         <a href="HW-ContactInfo-Solved.html">Contact</a>
+        <div>https://github.com/glipps https://www.linkedin.com/in/glipps</div>
       </nav>
     </div>
   </header>
