--- a/HW-AboutMe-Solved.html
+++ b/HW-AboutMe-Solved.html
@@ -20,7 +20,8 @@
         <a href="HW-AboutMe-Solved.html">About</a>
         <a href="HW-Portfolio-Solved.html">Portfolio</a>
         <a href="HW-ContactInfo-Solved.html">Contact</a>
-        <div>https://github.com/glipps https://www.linkedin.com/in/glipps</div>
+         <a href="https://github.com/glipps">Github</a>
+        <a href="https://www.linkedin.com/in/glipps">LinkedIn</a>
       </nav>
     </div>
   </header>
@@ -36,8 +37,7 @@
       <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
 
       <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-      <ul>https://github.com/glipps</ul>
-      <ul>https://www.linkedin.com/in/glipps</ul>
+     
     </section>
 
   </div>
