--- a/HW-Portfolio-Solved.html
+++ b/HW-Portfolio-Solved.html
@@ -19,6 +19,8 @@
         <a href="HW-AboutMe-Solved.html">About</a>
         <a href="HW-Portfolio-Solved.html">Portfolio</a>
         <a href="HW-ContactInfo-Solved.html">Contact</a>
+         <a href="https://github.com/glipps">Github</a>
+        <a href="https://www.linkedin.com/in/glipps">LinkedIn</a>
       </nav>
     </div>
   </header>
